--- a/bower.json
+++ b/bower.json
@@ -8,5 +8,7 @@
     "crossfilter": "~1.3.7",
     "lodash": "~2.4.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "jqueryeventaggregator": "https://github.com/reedspool/jquery-event-aggregator.git"
+  }
 }
