--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "lodash": "~2.4.1"
   },
   "devDependencies": {
-    "jqueryeventaggregator": "https://github.com/reedspool/jquery-event-aggregator.git"
+    "jqueryeventaggregator": "https://github.com/reedspool/jquery-event-aggregator.git#master",
+    "jquery.scrollTo": "~1.4.12"
   }
 }
